# DRace, a dynamic data race detector
#
# Copyright (c) Siemens AG, 2019
#
# Authors:
#   Felix Moessbauer <felix.moessbauer@siemens.com>
#
# This work is licensed under the terms of the MIT license.  See
# the LICENSE file in the top-level directory.

add_subdirectory("dummy")
if(WIN32)
    add_subdirectory("tsan")
endif()
add_subdirectory("traceBinary")
if(TARGET "parallel-hashmap")
    add_subdirectory("fasttrack")
endif()
